added introduction and background heading and underlined it

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>Albert Carlos Omware Portfolio</title>
 </head>
-<body>
+<body>,
+  <h1><<u>Introduction & Background</u></h1>
 
 </body>
 </html>
