added body introduction starting with a new paragraph

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>,
   <h1><<u>Introduction & Background</u></h1>
+    <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
+    
 
 </body>
 </html>
