added second paragraph of my introduction page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Albert Carlos Omware Portfolio</title>
+  <title><<b>Albert Carlos Omware Portfolio</b></title>
 </head>
 <body>,
   <h1><<u>Introduction & Background</u></h1>
-    <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
-    
+    <<p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
+      <<p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
 
 </body>
 </html>
