--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <h1><u>Introduction & Background</u></h1>
     <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
       <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
-
+        <p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
 </body>
 </html>
