--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <title><<b>Albert Carlos Omware Portfolio</b></title>
 </head>
+<style>
+body {background-color: grey;}
+h1   {color: blue;}
+p    {color: black;}
+</style>
 <body>
-  <p style="text-align:center;"><img src="images/Portfolio.jpg" alt="Portfolio Picture" height="200" width="300">
+<div class="width: 320px;
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0;">
+  <p style="text-align:center;"><img src="images/Portfolio.jpg" alt="Portfolio Picture" height="200" width="300"></div>
   <h1 style="color:blue;"><u>Introduction & Background</u></h1>
     <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
       <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
