--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@ p    {color: black;}
       <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
         <p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
           <p><h1><i>About Me</i></h1></p>
+          <hi><u>EDUCATIONAL BACKGROUND</u></hi></li>
+          <ul>
+              <li> 2008:  Inoorero University-Diploma in Information Communication & Technology</li>
+              <li> 2005:  Institute of Advanced Technology-Computer Hardware & Software maintenance course (A+)</li>
+	            <li> 2005:  Institute of Advanced Technology-Computer Networking and Security (N+)</li>
+              <li> 2004:  Le-Pic High School-Kenya Certificate of Secondary Education</li>
+              <li> 2000:  Nairobi Primary School-Kenya Certificate of Primary Education</li>
+          </ul>
 </body>
 </html>
