added work experience in index.html

--- a/index.html
+++ b/index.html
@@ -27,5 +27,15 @@ p    {color: black;}
               <li> 2004:  Le-Pic High School-Kenya Certificate of Secondary Education</li>
               <li> 2000:  Nairobi Primary School-Kenya Certificate of Primary Education</li>
           </ul>
+          <hi><u>WORK EXPERIENCE</u></hi>
+          <ul>
+              <li>Nov 2014 - Oct 2017 NAKUMATT HOLDINGS LTD</li>
+              <u> Regional IT Officer-Roles</u>
+              <li>Management of IT infrastructure in 5 different stores.</li>
+              <li>Database Management and system upgrading.</li>
+              <li>Manage server, network resources and information security of devices in the network.</li>
+              <li>Perform daily backup operations and give weekly reports.</li>
+              <li>Support and ensure systems are up and running at all times.</li>
+
 </body>
 </html>
