added background color on css stylesheet

--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><<b>Albert Carlos Omware Portfolio</b></title>
-</head>
-<style>
-body {background-color: grey;}
-h1   {color: blue;}
-p    {color: black;}
-</style>
+  <title>Albert Carlos Omware Portfolio</title>
+  <link href="css/main_styles.css" rel="stylesheet" type="text/css">
+  </head>
 <body>
-<div class="width: 320px;
-    padding: 10px;
-    border: 5px solid gray;
-    margin: 0;">
-  <p style="text-align:center;"><img src="images/Portfolio.jpg" alt="Portfolio Picture" height="200" width="300"></div>
-  <h1 style="color:blue;"><u>Introduction & Background</u></h1>
+
+  <img src="images/Portfolio.jpg" alt="Portfolio Picture" height="200" width="300"></div>
+  <h2><u>Introduction & Background</u></h2>
     <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
       <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
         <p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
-          <p><h1><i>About Me</i></h1></p>
-          <hi><u>EDUCATIONAL BACKGROUND</u></hi></li>
+  <p><h2><em>About Me</em></h2></p>
+          <p><h2><u>EDUCATIONAL BACKGROUND</u></h2></p>
           <ul>
               <li> 2008:  Inoorero University-Diploma in Information Communication & Technology</li>
               <li> 2005:  Institute of Advanced Technology-Computer Hardware & Software maintenance course (A+)</li>
@@ -27,15 +20,12 @@ p    {color: black;}
               <li> 2004:  Le-Pic High School-Kenya Certificate of Secondary Education</li>
               <li> 2000:  Nairobi Primary School-Kenya Certificate of Primary Education</li>
           </ul>
-          <hi><u>WORK EXPERIENCE</u></hi>
+          <h2><u>WORK EXPERIENCE</u></h2>
           <ul>
               <li>Nov 2014 - Oct 2017 NAKUMATT HOLDINGS LTD</li>
-              <u> Regional IT Officer-Roles</u>
-              <li>Management of IT infrastructure in 5 different stores.</li>
-              <li>Database Management and system upgrading.</li>
-              <li>Manage server, network resources and information security of devices in the network.</li>
-              <li>Perform daily backup operations and give weekly reports.</li>
-              <li>Support and ensure systems are up and running at all times.</li>
+              <li></li>
+              <li></li>
+
 
 </body>
 </html>
