--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
 
-  <img src="images/Portfolio.jpg" alt="Portfolio Picture" height="200" width="300"></div>
+  <img src="images/roll2.jpg" alt="Portfolio Picture" height="200" width="300"></div>
   <h2><u>Introduction & Background</u></h2>
     <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
       <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
@@ -23,8 +23,8 @@
           <h2><u>WORK EXPERIENCE</u></h2>
           <ul>
               <li>Nov 2014 - Oct 2017 NAKUMATT HOLDINGS LTD</li>
-              <li></li>
-              <li></li>
+              <li>JAN 2012 - AUG 2014 JM OHAS & ASSOSIATES</li>
+              <li>JAN 2011 - NOV 2011 YELLOW MOON MARKETINDmage</li>
 
 
 </body>
