added name in header

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Albert Carlos Omware Portfolio</title>
-  <link href="css/main_styles.css" rel="stylesheet" type="text/css">
+  <link href="main_styles.css" rel="stylesheet" type="text/css">
   </head>
 <body>
-
+  <h1><b>ALBERT CARLOS OMWARE</b></h1>
   <img src="images/roll2.jpg" alt="Portfolio Picture" height="200" width="300"></div>
   <h2><u>Introduction & Background</u></h2>
     <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
@@ -22,9 +22,9 @@
           </ul>
           <h2><u>WORK EXPERIENCE</u></h2>
           <ul>
-              <li>Nov 2014 - Oct 2017 NAKUMATT HOLDINGS LTD</li>
-              <li>JAN 2012 - AUG 2014 JM OHAS & ASSOSIATES</li>
-              <li>JAN 2011 - NOV 2011 YELLOW MOON MARKETINDmage</li>
+              <li>Nov 2014 - Oct 2017 Nakumatt Holdings LTD</li>
+              <li>JAN 2012 - AUG 2014 JM OHAS & Assosiation</li>
+              <li>JAN 2011 - NOV 2011 Yellow Moon Marketing</li>
 
 
 </body>
