--- a/projects.html
+++ b/projects.html
@@ -3,16 +3,13 @@
 <head>
   <title>Albert Carlos Omware Portfolio</title>
   <link href="main_styles.css" rel="stylesheet" type="text/css">
-  <div class="vertical-menu">
-  <a href="index.html" class="active">Home</a>
-    </div>
+
   </head>
 <body>
-  <h1><b>ALBERT CARLOS OMWARE</b></h1>
-  <img src="roll1.jpg" alt="Portfolio Picture" height="200" width="300"></div>
-  <h2><u>Introduction & Background</u></h2>
-    <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
-      <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
-        <p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
-</body>
+  <h1><b>PROJECTS</b></h1>
+  <img src="project1.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
+  <img src="project1.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
+  <img src="project2.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
+  <img src="project2.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
+  </body>
 </html>
