--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <li>Nov 2014 - Oct 2017 Nakumatt Holdings LTD</li>
               <li>JAN 2012 - AUG 2014 JM OHAS & Assosiation</li>
               <li>JAN 2011 - NOV 2011 Yellow Moon Marketing</li>
+              <footer>&copy; Copyright 2018 bertocarl INC.</footer>
 
 
 </body>
