added header in intrests

--- a/projects.html
+++ b/projects.html
@@ -11,5 +11,6 @@
   <img src="project1.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
   <img src="project2.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
   <img src="project2.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
+  <img src="project2.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
   </body>
 </html>
