added refrence of main_style.css to link in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Albert Carlos Omware Portfolio</title>
-  <link href="main_styles.css" rel="stylesheet" type="text/css">
+  <link href="css/main_styles.css" rel="stylesheet" type="text/css">
   <div class="vertical-menu">
   <a href="index.html" class="active">Home</a>
   <a href="projects.html">Projects</a>
