moved the top navigation menu to the right and added css styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <title>Albert Carlos Omware Portfolio</title>
   <link href="css/main_styles.css" rel="stylesheet" type="text/css">
-  <div class="vertical-menu">
-  <a href="index.html" class="active">Home</a>
-  <a href="projects.html">Projects</a>
-  <a href="intrest.html">Intrests</a>
-  </div>
-
+  <div class="topnav-right">
+    <a class="active" href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="intrest.html">Intrests</a>
+      </div>
   </head>
 <body>
   <h1><b>ALBERT CARLOS OMWARE</b></h1>
