updated files to github

--- a/index.html
+++ b/index.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Albert Carlos Omware Portfolio</title>
-  <link href="css/main_styles.css" rel="stylesheet" type="text/css">
-  <div class="topnav-right">
-    <a class="active" href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="intrest.html">Intrests</a>
-      </div>
-  </head>
+<title>Albert Carlos Omware Profile</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+
+</head>
 <body>
-  <h1><b>ALBERT CARLOS OMWARE</b></h1>
-  <img src="roll2.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
-  <h2><u>Introduction & Background</u></h2>
-    <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
-      <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
-        <p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
-  <p><h2><em>About Me</em></h2></p>
-          <p><h2><u>EDUCATIONAL BACKGROUND</u></h2></p>
-          <ul>
-              <li> 2008:  Inoorero University-Diploma in Information Communication & Technology</li>
-              <li> 2005:  Institute of Advanced Technology-Computer Hardware & Software maintenance course (A+)</li>
-	            <li> 2005:  Institute of Advanced Technology-Computer Networking and Security (N+)</li>
-              <li> 2004:  Le-Pic High School-Kenya Certificate of Secondary Education</li>
-              <li> 2000:  Nairobi Primary School-Kenya Certificate of Primary Education</li>
-          </ul>
-          <h2><u>WORK EXPERIENCE</u></h2>
-          <ul>
-              <li>Nov 2014 - Oct 2017 Nakumatt Holdings LTD</li>
-              <li>JAN 2012 - AUG 2014 JM OHAS & Assosiation</li>
-              <li>JAN 2011 - NOV 2011 Yellow Moon Marketing</li>
-              <div id="footer">
-   <p>Copyright (c) 2018 bertocarl.github.io All rights reserved</p>
-</div>
+
+<center><h1>Albert Carlos Omware</h1></center>
+<section>
+  <nav>
+    <img src="roll2.jpg" alt="Portfolio Picture" height="260" width="340" class="center">
+  </nav>
+</section>
+<p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
+<p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
+<p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
+<header>
+  <h2>Education & Work History</h2>
+</header>
+<section>
+  <nav>
+    <ul>
+      <li><h2><a href="projects.html">Projects</a></h2></li>
+      <li><h2><a href="intrest.html">Intrests</a></h2></li>
+    </ul>
+  </nav>
+<article>
+    <h1>Education</h1>
+    <p><ul>
+        <li> 2008:  Inoorero University-Diploma in Information Communication & Technology</li>
+        <li> 2005:  Institute of Advanced Technology-Computer Hardware & Software maintenance course (A+)</li>
+	      <li> 2005:  Institute of Advanced Technology-Computer Networking and Security (N+)</li>
+        <li> 2004:  Le-Pic High School-Kenya Certificate of Secondary Education</li>
+        <li> 2000:  Nairobi Primary School-Kenya Certificate of Primary Education</li>
+    </p>
+    <h1>Work History</h1>
+    <p><ul>
+        <li> Nov 2014 - Oct 2017 Nakumatt Holdings LTD</li>
+        <li> JAN 2012 - AUG 2014 JM OHAS & Assosiation</li>
+        <li> JAN 2011 - NOV 2011 Yellow Moon Marketing</li>
+      </ul>
+</article>
+</section>
+
+<footer>
+  <p>Copyright (c) 2018 bertocarl.github.io All rights reserved</p>
+</footer>
 
 </body>
 </html>
