--- a/intrest.html
+++ b/intrest.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Albert Carlos Omware Portfolio</title>
-  <link href="main_styles.css" rel="stylesheet" type="text/css">
-
-    </head>
+<title>Albert Carlos Omware Profile</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-  <h1><b>ALBERT CARLOS OMWARE</b></h1>
+<header>
+  <h2>Intrests & Hobbies</h2>
+</header>
+<section>
+  <nav>
+    <img src="roll1.jpg" alt="Portfolio Picture" height="100" width="150" class="center">
+    <img src="roll3.jpg" alt="Portfolio Picture" height="100" width="150" class="center">
+  </nav>
+<article>
+    <h1>Hobbies</h1>
+    <p><ul>
+        <li> Skating-Rollball </li>
+        <li> Reading </li>
+	      <li> Cooking </li>
+        <li> Technology </li>
+        <li> Gaming </li>
+    </p>
+      </ul>
+</article>
+</section>
 
-  <h2><u>Introduction & Background</u></h2>
-    <p>I am an enthusiastic IT professional currently studying programming with Moringa School, having previously spent 5 years working as an IT Officer, giving me a good blend of enterprise and startup experience. </p>
-      <p>I enjoyed resolving technical problems and working in a dynamic environment with a focus on good service delievery to clients and users of the systems.</p>
-        <p>Besides work I also engage in sporting activities and I am part of the Kenya Rollball National Team men of which I joined in October 2013, and I have been actively involved till today. I have participated in many competitions and won different medals including personal achievements.</p>
-  <p><h2><em>About Me</em></h2></p>
-          <p><h2><u>EDUCATIONAL BACKGROUND</u></h2></p>
-          <ul>
-              <li> 2008:  Inoorero University-Diploma in Information Communication & Technology</li>
-              <li> 2005:  Institute of Advanced Technology-Computer Hardware & Software maintenance course (A+)</li>
-	            <li> 2005:  Institute of Advanced Technology-Computer Networking and Security (N+)</li>
-              <li> 2004:  Le-Pic High School-Kenya Certificate of Secondary Education</li>
-              <li> 2000:  Nairobi Primary School-Kenya Certificate of Primary Education</li>
-          </ul>
-          <h2><u>WORK EXPERIENCE</u></h2>
-          <ul>
-              <li>Nov 2014 - Oct 2017 Nakumatt Holdings LTD</li>
-              <li>JAN 2012 - AUG 2014 JM OHAS & Assosiation</li>
-              <li>JAN 2011 - NOV 2011 Yellow Moon Marketing</li>
-
+<footer>
+  <p>Copyright (c) 2018 bertocarl.github.io All rights reserved</p>
+</footer>
 
 </body>
 </html>
