--- a/projects.html
+++ b/projects.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Albert Carlos Omware Portfolio</title>
-  <link href="main_styles.css" rel="stylesheet" type="text/css">
-
-  </head>
+<title>PROJECTS</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-  <h1><b>PROJECTS</b></h1>
-  <img src="project1.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
-  <img src="project1.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
-  <img src="project2.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
-  <img src="project2.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
-  <img src="project2.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
-  </body>
+  <h2>PROJECTS</h2>
+</header>
+
+<section>
+  <nav>
+    <img src="project1.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
+  </nav>
+
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+<section>
+  <nav>
+    <img src="project2.jpg" alt="Portfolio Picture" height="150" width="200" class="center">
+  </nav>
+
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+<section>
+  <nav>
+    <img src="project2.jpeg" alt="Portfolio Picture" height="150" width="200" class="center">
+  </nav>
+
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+<section>
+  <nav>
+      <img src="project3.png" alt="Portfolio Picture" height="150" width="200" class="center">
+  </nav>
+
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
+<footer>
+  <p>Copyright (c) 2018 bertocarl.github.io All rights reserved</p>
+</footer>
+
+</body>
 </html>
