added go back link to project and intrest page

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <a class="btn" href="index.html">Go Back</a>
   <h2>PROJECTS</h2>
 </header>
 
