--- a/intrest.html
+++ b/intrest.html
@@ -7,6 +7,7 @@
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<a class="btn" href="index.html">Go Back</a>  
 <header>
   <h2>Intrests & Hobbies</h2>
 </header>
