added the project descriptions

--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,9 @@
   </nav>
 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
+    <h1>Project 1</h1>
+    <p>This was my a project I did under guidance of my technical mentors to achieve maximum out of the lessons I have learnt in Moringa and it gave me an opportunity to explore my talent and think out of the box.</p>
+      </article>
 </section>
 <section>
   <nav>
@@ -28,9 +27,8 @@
   </nav>
 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>Project 2</h1>
+    <p>This was my first coding project that I completely passed and was recommended by my technical mentors to join the core class because of the brilliance of executon</p>
   </article>
 </section>
 <section>
@@ -39,9 +37,8 @@
   </nav>
 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>Project 3</h1>
+    <p>This was the first project I did after joining the core class and it was one of my best projects ever executed</p>
   </article>
 </section>
 <section>
@@ -50,9 +47,8 @@
   </nav>
 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>Project 4</h1>
+    <p>This is the current project am working on currently under construction but it will revolutionize the programming industry</p>
   </article>
 </section>
 <footer>
